[package]
name = "multi-sig"
version = "1.0.8"
edition = "2024"
rust-version = "1.85"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multisig self-describing multicodec implementation for digital signatures"
repository = "https://github.com/cryptidtech/multi-sig.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["multiformats", "multisig", "signatures", "crypto"]
categories = ["cryptography", "encoding"]

[features]
default = ["serde"]
# `serde` is now a required dependency because the core `threshold_meta`
# module (always compiled) derives `Serialize`/`Deserialize` for its CBOR
# blob types. The feature flag is retained for backward compatibility and
# controls only the public `serde` impl module.
serde = []

[dependencies]
ciborium = "0.2"
chacha20poly1305 = "0.11"
elliptic-curve = "0.14"
getrandom = { version = "0.4" }
# blsful configured per-target below (blst for native, rust for wasm)
multi-base = "1.0"
multi-codec = "1.0"
multi-trait = "1.0"
multi-util = "1.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
ssh-encoding = "0.3"
thiserror = { version = "2.0" }
unsigned-varint = { version = "0.8", features = ["std"] }
zeroize = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
blsful = { version = "4.0.0-rc1", default-features = false, features = ["rust"] }
ssh-key = { version = "0.7.0-rc.11", default-features = false, features = ["alloc", "ecdsa", "ed25519"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blsful = { version = "4.0.0-rc1", default-features = false, features = ["blst"] }
ssh-key = { version = "0.7.0-rc.11", default-features = false, features = ["alloc", "ecdsa", "ed25519"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
proptest = "1.4"
serde_json = "1.0"
serde_test = "1.0"

[[bench]]
name = "multisig_bench"
harness = false
path = "benches/multisig_bench.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "deny"
